# md

./: .gitignore  README.md  bun.lockb  components.json  index.html  package-lock.json  package.json  tauri_ai_sidebar_arch.md  todo.md  tsconfig.json  vite.config.ts
desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
desktop/scripts/: bump-version.js  generate-latest-json.cjs  release.sh
desktop/src/: app.css  app.tsx  fonts.css  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: layout_manager.rs  lib.rs  main.rs  web_blanket.rs
desktop/src/components/: main-layout.tsx
desktop/src/hooks/: use-clipboard.ts
desktop/src/lib/: ime.ts  url.ts  utils.ts
desktop/src/stores/: chat-store.ts  clipboard-store.ts  layouts-store.ts  scraping-store.ts  settings-store.ts  shortcuts-store.ts  todo-store.ts  ui-store.ts  update-store.ts  web-blanket-store.ts
desktop/src/types/: ai.ts  clipboard.ts  shortcuts.ts  window.ts
landing/: Dockerfile  index.html  package.json
landing/public/: llms.txt
landing/src/: App.tsx  index.css  main.tsx
landing/src/components/: bento-grid.tsx  desktop-mock.tsx  (+9 more)
scripts/: release.sh
src/: app.css  app.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: layout_manager.rs  lib.rs  main.rs
src/components/: main-layout.tsx
src/stores/: chat-store.ts  layouts-store.ts  settings-store.ts  ui-store.ts
src/types/: ai.ts  scraping.ts
(+79 files in other folders)
