[package]
name = "my-drawer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_drawer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
window-vibrancy = "0.7.1"
cocoa = "0.26.1"
objc = "0.2.7"
base64 = "0.22.1"
core-graphics = "0.25.0"
core-foundation = "0.10.1"
accessibility-sys = "0.2.0"
reqwest = "0.13.1"
html2text = "0.16.5"
tauri-plugin-http = "2.5.4"

